# cocotbext-fcov

./: .gitignore  LICENSE  README.md  pyproject.toml
cocotbext/fcov/: __init__.py  coverage.py  make_coverage.py
cocotbext/fcov/bins/: group.py  item.py  type.py
tests/pytest/: test_bin_group.py  test_bin_item.py  test_bin_type.py  test_coverage_model.md  test_coverage_model.py  test_coverage_model.sv  test_covergroup.py  test_coverpoint.py  test_cross.py
