[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cocotbext-fcov"
version = "0.1.0"
description = "Cocotb Extension for Functional Coverage"
authors = [
    "Youngsik Kim <kaengsik@furiosa.ai>",
    "Seokho Lee <seokholee@furiosa.ai>",
    "Minho Kim <minho@furiosa.ai>",
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: cocotb",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
packages = [
    { include = "cocotbext" },
]

[tool.poetry.dependencies]
python = "^3.8"
cocotb = "^1.8.1"
numpy = "*"
pandas = "*"

[tool.poetry.scripts]
make_coverage = "cocotbext.fcov.make_coverage:main"

[tool.black]
line-length = 120
preview = true
include = '\.pyi?$'
