[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocotbext-fcov"
version = "0.1.0"
description = "Cocotb Extension for Functional Coverage"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Youngsik Kim", email = "kaengsik@furiosa.ai" },
    { name = "Seokho Lee", email = "seokholee@furiosa.ai" },
    { name = "Minho Kim", email = "minho@furiosa.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "Framework :: cocotb",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "cocotb>=2.0.0",
    "numpy",
    "pandas",
]

[project.scripts]
make_coverage = "cocotbext.fcov.make_coverage:main"

[tool.setuptools.packages.find]
include = ["cocotbext.fcov*"]

[tool.black]
line-length = 120
preview = true
include = '\.pyi?$'
